validaciones de body y fix al registrar una compra
