# internal/purchase/infrastructure/handler/find.go
@@ -2,31 +2,31 @@ package handler
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
 	"log"
 	"meliarqsoft2/internal/purchase/infrastructure/dto"
 	"net/http"
 )
 
 // Find
-// @Summary Find purchases.
-// @Description Find purchase in a range of dates.
-// @Accept json
+// @Summary Find purchases from product.
+// @Description Find purchases from product
 // @Produce json
 // @Tags Purchases
-// @Param Body body dto.FindPurchaseRequest true "Register"
-// @Success 201 {object} []dto.PurchaseDTO
-// @Failure 400
+// @Param 	id 	path  string true "ID from product"
+// @Success 200
 // @Failure 404
-// @Failure 500
-// @Router /products/purchases/prices [POST]
+// @Failure 400
+// @Router /products/{id}/purchases [GET]
 func (handler PurchaseGinHandler) Find(c *gin.Context) {
-	var findFilter dto.FindPurchaseRequest
-	if err := c.BindJSON(&findFilter); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+	id, err := uuid.Parse(c.Param("id"))
+	log.Println(id)
+	if err != nil {
+		c.Status(http.StatusBadRequest)
+		log.Println(err.Error())
 		return
 	}
-
-	resp, err := handler.manager.Find(findFilter.Limit, findFilter.Start)
+	resp, err := handler.manager.Find(id)
 	if err != nil {
 		c.Status(http.StatusBadRequest)
 		log.Print(err)
@@ -38,5 +38,5 @@ func (handler PurchaseGinHandler) Find(c *gin.Context) {
 		res = append(res, dto.MapPurchaseToJSON(elem))
 	}
 
-	c.JSON(http.StatusCreated, res)
+	c.JSON(http.StatusOK, res)
 }
