# internal/seller/infrastructure/dto/request.go
@@ -1,11 +1,11 @@
 package dto
 
 type CreateSellerRequest struct {
-	BusinessName string `json:"business_name" bson:"business_name"`
-	Email        string `json:"email" bson:"email"`
+	BusinessName string `json:"business_name" bson:"business_name" binding:"required"`
+	Email        string `json:"email" bson:"email" binding:"required,email"`
 }
 
 type UpdateSellerRequest struct {
-	BusinessName string `json:"business_name" bson:"business_name"`
-	Email        string `json:"email" bson:"email"`
+	BusinessName string `json:"business_name" bson:"business_name" binding:"required"`
+	Email        string `json:"email" bson:"email" binding:"required,email"`
 }
